fixed white space on right side of page

--- a/style.css
+++ b/style.css
@@ -8,6 +8,21 @@
     padding: 0;
 }
 
+.container {
+    padding: 0;
+    margin: 0;
+}
+
+.row {
+    padding: 0;
+    margin: 0;
+}
+
+.col {
+    padding: 0;
+    margin: 0;
+}
+
 /* navbar */
 .navbar {
     background-color: var(--purple);
@@ -128,11 +143,11 @@
 
 form {
     background: var(--purple);
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
     justify-content: center;
-    min-width: 300px;
-    padding: 20px;
+    padding: 2%;
+    min-width: 250px;
     width: 25%;
 }
 
@@ -184,11 +199,11 @@ footer a:hover {
 /* media query */
 @media (min-width: 768px) {
     
-    /* navbar */
+    navbar
     .nav-contact {
         border: 1px solid white;
         border-radius: 50px;
-    }
+    } */
 
     /* jumbotron */
     .about {
